[gd_scene load_steps=8 format=3 uid="uid://dbcd4nk52b6ra"]

[ext_resource type="Texture2D" uid="uid://xmqosl7hxpvu" path="res://scenes/intro/itro-export_1.png" id="1_6sepd"]
[ext_resource type="Theme" uid="uid://bvabb4lgyanfc" path="res://resources/themes/theme.tres" id="1_86fx0"]
[ext_resource type="Script" path="res://scenes/intro/intro_screen.gd" id="1_clmfj"]
[ext_resource type="Texture2D" uid="uid://crhrxlqkoqtg5" path="res://scenes/intro/itro-export_2.png" id="2_4opvb"]
[ext_resource type="Texture2D" uid="uid://2av4mg5ioxav" path="res://scenes/intro/itro-export_3.png" id="3_w2vke"]
[ext_resource type="Texture2D" uid="uid://d1cb24kue5x3a" path="res://scenes/intro/itro-export_4.png" id="4_vmnec"]
[ext_resource type="Texture2D" uid="uid://b2e6tgu16d1m5" path="res://scenes/intro/itro-export_5.png" id="5_6emv1"]

[node name="IntroScreen" type="CanvasLayer"]
script = ExtResource("1_clmfj")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1_86fx0")

[node name="Intro1" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_6sepd")
expand_mode = 2

[node name="Intro2" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("2_4opvb")
expand_mode = 2

[node name="Intro3" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("3_w2vke")
expand_mode = 2

[node name="Intro4" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("4_vmnec")
expand_mode = 2

[node name="Intro5" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("5_6emv1")
expand_mode = 2

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.5
autostart = true
